gitops/apps/adguard/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adguard
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: adguard
  template:
    metadata:
      labels:
        app: adguard
    spec:
      containers:
      - name: adguard
        image: adguard/adguardhome:latest
        ports:
        - containerPort: 3000
          name: http
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        volumeMounts:
        - name: conf
          mountPath: /opt/adguardhome/conf
        - name: work
          mountPath: /opt/adguardhome/work
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "512Mi"
            cpu: "250m"
      volumes:
      - name: conf
        persistentVolumeClaim:
          claimName: adguard-conf
      - name: work
        persistentVolumeClaim:
          claimName: adguard-work
