gitops/apps/adguard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adguard
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - adguard.kobeep.pl
    secretName: adguard-tls
  rules:
  - host: adguard.kobeep.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: adguard
            port:
              number: 3000
